# RootsProject

./: .gitattributes  .gitignore  README.md  environment.yml  pyproject.toml
docs/: architecture.md  limitations.md  provenance.md  setup.md  task_summary.md
models/: README.md
scripts/: run_cv_pipeline.py  run_full_demo.py  run_pid_demo.py
src/roots_project/: __init__.py  config.py  paths.py
src/roots_project/cv/: __init__.py  coordinates.py  pipeline.py  postprocessing.py  preprocessing.py  segmentation.py
src/roots_project/simulation/: __init__.py  controller.py  demo.py  plates.py  sim_class.py
src/roots_project/simulation/assets/: plate_pairs.json
tests/: test_coordinates.py  test_pid_controller.py  test_plate_textures.py  test_root_tip_extraction.py  test_simulation_geometry.py
